ToolLayout bugs fixed, minor header&profile changes

--- a/src/React/ToolLayout/toollayout.css
+++ b/src/React/ToolLayout/toollayout.css
@@ -18,7 +18,6 @@ body{
   min-height: 1vh;
   overflow: hidden;
 
-
 }
 .rightpanel{
   position: relative;
@@ -28,22 +27,41 @@ body{
   overflow: hidden;
 
 }
+.column-resizer{
+  cursor: col-resize;
+}
+.left-resizer{
+  cursor: e-resize;
 
-.resizerfirst{
-  width: 5px;
-  border-right:1px solid black;
+}
+
+.right-resizer{
+  cursor: w-resize;
+
+}
+
+.resizer{
+  width: 6px;
+  background-color: #f0eded;
+  position:relative;
+  flex-shrink: 0;
+}
+
+/* .resizerfirst{
+  width: 6px;
+  background-color: black;
   position:relative;
   cursor: col-resize;
   flex-shrink: 0;
 }
 
 .resizersecond{
-  width: 5px;
-  border-left: 1px solid black;
+  width: 6px;
+  background-color: black;
   position: relative;
   cursor: col-resize;
   flex-shrink: 0;
-}
+} */
 
 .menucontent{
   display:flex;
@@ -56,38 +74,41 @@ body{
   margin:0px;
   padding:0px;
   overflow: scroll;
-  /* position: relative; */
-  -ms-overflow-style: none;
-  scrollbar-width:none;
-  height:calc(100vh - 100px);
+  position: relative;
+  height: calc(100vh - 60px);
+}
+.shrink-height{
+  height:calc(100vh - 100px) !important;
 }
 
-.maincontent::-webkit-scrollbar {
-  display: none;
-
-}
 
 @media only screen and (max-width: 767px) {
 .maincontent{
-height:calc(100vh - 190px);
-/* position: relative; */
+height:calc(100vh - 120px);
+position: relative;
 
 }
+
+.shrink-height{
+  height:calc(100vh - 160px) !important;
 }
 
+}
 
-
-.phonebuttoncontainer{
+ .phonebuttoncontainer{
   display : flex;
   width: 100%;
   bottom: 0.1px;
   height: calc(100vh - 96vh);
   position: fixed;
   left: 0px;
+  z-index:5;
   text-align: center;
+  background-color: darkorange;
 }
+
 .phonebutton{
     color: white;
     background-color: black;
     width: 100%;
-}
+} 
